# ChangeLog for app-text/qpdfview
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/qpdfview/ChangeLog,v 1.65 2015/02/20 08:39:29 yngwin Exp $

  20 Feb 2015; Ben de Groot <yngwin@gentoo.org> metadata.xml:
  Improve USE=fitz description (bug #540450)

  10 Feb 2015; Ben de Groot <yngwin@gentoo.org> qpdfview-0.4.13.ebuild:
  Up minimal qtcore:4 version for lrelease fix (bug #532962 comment#11)

  31 Jan 2015; Ben de Groot <yngwin@gentoo.org> qpdfview-0.4.13.ebuild:
  Point directly to lrelease of used Qt version (bug #532962)

  30 Dec 2014; Markus Meier <maekke@gentoo.org> qpdfview-0.4.12.ebuild:
  arm stable, bug #533504

*qpdfview-0.4.13 (25 Dec 2014)

  25 Dec 2014; Ben de Groot <yngwin@gentoo.org> +qpdfview-0.4.13.ebuild,
  -qpdfview-0.4.11.1.ebuild, -qpdfview-0.4.7.ebuild:
  Version bump (bug #532964). Clean up older versions.

  25 Dec 2014; Ben de Groot <yngwin@gentoo.org> qpdfview-0.4.12.ebuild:
  Add dev-qt/linguist-tools:5 dependency for qt5 lrelease (bug #532962).

  13 Dec 2014; Ben de Groot <yngwin@gentoo.org> qpdfview-0.4.12.ebuild:
  With qt5 it needs qtprintsupport to build

*qpdfview-0.4.12 (02 Nov 2014)

  02 Nov 2014; Ben de Groot <yngwin@gentoo.org>
  +files/qpdfview-0.4.12-no_sql.patch, +qpdfview-0.4.12.ebuild:
  Version bump, with patch from bug #526462. Tightening up formatting again.

  28 Sep 2014; Davide Pesavento <pesa@gentoo.org> qpdfview-0.4.11.1.ebuild:
  Minor cleanup.

*qpdfview-0.4.11.1 (24 Sep 2014)

  24 Sep 2014; Ben de Groot <yngwin@gentoo.org> +qpdfview-0.4.11.1.ebuild,
  metadata.xml:
  Version bump. Thanks to Alpha Bravo in bug #506068 for ebuild improvements.

  16 Jan 2014; Michael Palimaka <kensington@gentoo.org> -qpdfview-0.4.4.ebuild,
  -qpdfview-0.4.6.ebuild:
  Remove old.

  14 Dec 2013; Markos Chandras <hwoarang@gentoo.org>
  +files/qpdfview-0.4.7-fix-sqlite-build.patch, qpdfview-0.4.7.ebuild: