@@ -5,28 +5,30 @@ AUX qpdfview-0.4.12-no_sql.patch 251 SHA256 26471031c9873c50c9f7bc07173e1a68e67e
 AUX qpdfview-0.4.7-fix-sqlite-build.patch 520 SHA256 c8d35da5c9d2d7d8fc39c4523a43a2b666dd7073993f416ced313378c5054dc0 SHA512 07b75bcf7ae27deb04669fb48353426e01b638ea2cb5a5037d91dba900a7375694ba6b2a8879745925fe66c5080b1790127200af85a36eff834c040ba5920bc7 WHIRLPOOL 9620569ee0d81a474764e059cea7856cc3a1249322dd5824625747c4dfe306f30f6c5942afed036482198d97b64e4c8c52d00e692c45402116a86fc63092623e
 DIST qpdfview-0.4.12.tar.gz 550047 SHA256 0fb8166919de7a613e1112aa0886f55605d14e8bd526d4729f98ae1d60ced4c0 SHA512 577de3d49d197f35a87223bdf583d38e9dca15ac7c64f1ec85b046e83945c8708f56c758bb09f0974da2a95a6a4e5639c264071ad963933946798ec4034dbb68 WHIRLPOOL 575b31e919b5d2a300bd6c5ef5f83d66b278cf46371a7cef779749de91c1e740049032cfca496c845207b0aa45fda9cf744b173ed936a5302d31054053499fa6
 DIST qpdfview-0.4.13.tar.gz 563548 SHA256 8ff563055fb4df476afed08ead465e6204c16fc419a483ebf3dbe89779f28e41 SHA512 0246a2954ca01a1b3df69473ee53c7674ee891c460a26aebbf8acf2505692ec40eb712388893eddf6954180ddadb7965f173b9e55a3574f2cc8c0820d78be952 WHIRLPOOL 702ba4b5f1c597dfb4483775d9b089ff263594d99f7c9866c81ffb1a7755615b960c90a3b6c7cb8ea4b0d078c7d80b645612b5ce2eb618b2fedb785a6c67a725
+DIST qpdfview-0.4.14.tar.gz 591025 SHA256 69c685be50792256547ce85c672448bd655f8ca4a1a15fbf4e97e58d7f47a895 SHA512 f2503aca744a389a8b783329de5f67e338573672817e54d1762bc0e8de6652be2197c3a3787041c2307dc35b0d95d63d8a1b82f89647dcd30a9f840385427b1c WHIRLPOOL 6675493dcf0de8ad1a52fdd80afaa72bb6226ba193df5c2eb4da6bee2902602229c944497bbf36ac5b97a4ced3fd7e1de4f9137c000787b410a978cedaf01758
 DIST qpdfview-0.4.3.tar.gz 351371 SHA256 66c579e6e837aed532a1389ced4987cce1055cea36f8b3d61b634dd8cbdd8c79 SHA512 eff18828bda1fbec5004d301ba9beea912064451a3ebe686853dedc64faeb2a423a49d3cf281f48740e144552f8f3bec6be70bb5e38f4a6604b89e68fe5bfa3b WHIRLPOOL 74bf95f126d95efec68401d33391ce09b560f1ee4fa4a57e35e7941c9a33e55206b7f1a7771ffb8349447447e544f0cc9008f91c73f07f37d6ea73d2f290184c
 EBUILD qpdfview-0.4.12.ebuild 2445 SHA256 529979cdcf0097d7348603c2f8a691db3f62761fb22a42d9d5ce9d5ee569af67 SHA512 38ce32200f0ec8a4fa26c420af8b12a985c61414d592f84447365c55062d36670eb9371e575f9a845b85edd728cb96e6968ceec344d9dccbee33b06467429a0e WHIRLPOOL c44b86351f2c084f43376c98f799cf51be4f811a446cbb1db1dfbbbb6d48752ec12678c9378841a91e74fe5810319ac7f0ea6a139b7122ee5a432a9593163928
 EBUILD qpdfview-0.4.13.ebuild 2577 SHA256 78fac3f6e49cf13874881e3e92cb606ceecc6563bcd5f455e1e8ca9977f8134d SHA512 d85c370333635d21b2ffb9b903413641c1a64e255cf93cd4201f4c58e3bd7fff37f4b0b4401aea606f7c00a78dcaf11cba7997eadedff3b72849ef91d8bac440 WHIRLPOOL 2f9d60ee4d5fc1e3e75a86a16419ae2e2ec91dced0873c7d4a2cfec343391a0da8eafc662e752a8bd3e4c3502d6e38dd4ce728a22878361b3ef851d6fecba1f6
+EBUILD qpdfview-0.4.14.ebuild 2580 SHA256 aad004b289790200993eead7ac7168b862e56e352080d5050d3ff8381a822c62 SHA512 824f24e705f4e109bf56870ed7f9a50bcaefea524e198e35dc55b64d5f12f13f7c63d8b44922512e4944ebd5b00cbfc3b6b8551aaf52beae69f8acad66bd5f25 WHIRLPOOL bed2bba7cef1a1562db0b5ffdc2c11e642c18ff889815ee88caea8e27f6f59dcc9ebc3a4218f99a711b5992170d2b82519d88a4f2ddffd525cd9864800aab3f2
 EBUILD qpdfview-0.4.3.ebuild 1589 SHA256 ce39f08f84a3d6af4ccea913ff8cb0e863147a61618f6f7a842e9a8add1e5e30 SHA512 e9e55fe6ccc326442b371a17434970664ab07d50e5d9bfca89e2e5103c65ff9033bcf26a9e6d617dc19cba534f04b81b5b8f1b5fbd3c7fe362a576cb05fa8735 WHIRLPOOL 5dc94fd40476331cf600feb8c023e0ca194ba402a81fac19939367a8c32b11c782402176ee404f3d7953b344d0a330ae577e652e67ab5cea5d2b6aaa418d9144
-MISC ChangeLog 9775 SHA256 2979a20e01e6a82bec6b2b6d6f0111f9c3c1308cd0841fa248acdbf8a25fe75b SHA512 8b95ad9622f111052b08865f3145803b8adb7abc56d176ee9955a103e99b27d0a20bc345805d0bef5e7a6d18a52312e7b895ef8630357683020dbfd091bd2f30 WHIRLPOOL b9c7412cbcf06ed440d051027164a3562c26053fa4f44ec76f557d93496f8d2aea37c4f598d5485045d59c54df6d3a8f7332d70b8bfc3a0f1b6fc1235c0d6bf2
+MISC ChangeLog 9910 SHA256 35f25a818035f10c7d518f913b4e53ae4e4991e4afb680014128b9d075c17b17 SHA512 046fe1ff636fee59a2f92094bc583d4cc576bac39671fea7bd2e328c074a7b0a9038cd8ba6c9c720c0d8281b7dff981e36b3e24e4ce77f961ef63bc0b57c51f9 WHIRLPOOL bd8cc1194396335c483227117fa7d7929168e6c4151ff28d7cad44070f2f42848fd46e95a9f52b875b35eaa386a31546e4ce2aec9fa7dc536fca1b19ce26c847
 MISC metadata.xml 382 SHA256 9e69826293ad7b172ac7eeaa4225ed7b94d216b3f90177344a4e8af5a4bc9fd0 SHA512 ccc59884f91976f812ab407e257d680060285d14d60082b939a2c21eb3c1b8b7fa6a4ca2679d0a1413c98cb11783b6291688a3c2d56c33aa84e96a3687edc380 WHIRLPOOL c424dd8d895a393ef3a795cc24a1986525c487b75bddcd4cbab744d11e0c52971b591e017a76e3b282d4e100458ce92e9d2595fcc944d362eb5b79d4d15d079a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJU5vLCXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJU+FwcXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
-RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOCFkP/3vTLtBkhibvpS/vrsLs9kyy
-imsE6YH9hgSseGp1vEMfrxSq/UcBqfvxLh3h1DICGAOLtmBsTmxGg4giS8c3qNTT
-/X7+YELjV1CZJit51cEKu4vCT+5vNRZxY9S8vFBk31urYVcJ8M5K24JfmIcn5G5G
-2Izs18JpRDJKf4+Chd7gNEfyQJo6RhwrHGwUH8xMPo7y+Fki9UhFnb/0ySVIHmBi
-t0XqEbuW2mzDp11drcLEgiAga+e+CXn+V+1jt9avokUjqY/mXNtWu8m/n//QYHle
-59ygxO6/i0GbS6hrVeD8vr59S1elvAAFX1Wm+NzqjoCqR93yCuUbqKHAmtEY85Re
-mqwU4kygIoBCspGoWYDUogtYgxJy/wEvUH/j4W2ioLg1D0pbLVW9rDIUZXhhrCbv
-7CqRQY4oVvq4qjNRys5f6wjWlWZ9A1TREuqOQlGscPOsJevm7TwXCQXsN+n5zieT
-SPJZBatzWU9OwpyL/K+iVGUM4d/4EBBJJ2WBqm7q+kEI757OsW9WpqIt9ZxG9KDN
-WBXLqBFexK1oJ9ag+F/4s92yEDrPjhlRo4Rxj1jRmLdYSk2ucRscDO/pmEsVxEhP
-KpPjccrEbQSjCzPiWOi+Eg7XoKzWxdy59nBvJbKo/7pRtRAc2nOcl63nzoSuui9B
-n7MwdZ4dPAMJwEpX/izY
-=sjOj
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOhkQQAJtgZuKMuHs59luUgZ4OCrC5
+P+hd1+uiSSL1QoaXf2oTd5dvFN9kT7ASaQ5JkScm/E5+SZHi6VlA6Fj1InK2yJom
+/Zs9HZyoOEoOQBlMiKWR+e5diZ2lRLNyTOMihAALWKkTtp/csMdXmNKPCwJ29awY
+tvXuOxa4WK/Fflxv2C9cU1p+5HBPuqoWBQ4HuC/UFTn6KDApQqRivTi0b7G1NRP7
+54BQCZvZrUtdkdzkXcp5lsC5w7wCyc4WpUMKAWcp1wzv+oGPHf0wHIoYh6Pkmdfn
+fyQhsCyD7MA8HgFBa+KwlW/aiK8k4VkTLtUOTAJFNbd+0TBqazZhwHIP6YpmPcxr
+3ITRD/DMxbxu6jBZohVLfP/PFkFA+rU6CFUAROrOukgZxCUmQh0IKLwLUWueD6re
+apQ8sVFrvcTWe54h5QgDOLFjw2J2jy1ipxwQbcnVpex2HslcIo2FRszogR/iortB
+OoTg1x4flXfjWbKHcx6S+51nrPcCG3ydnkNojlRK5tMMwSBNGIhKRlYS1b0CW1UN
+Kpn5aJGstEoVupzw0QnWY4lGEnwT/YMGvJBBIsDw/P1KnEcV701stPB+/FFUm/2i
+4M9GOIHjq50yskRiMU8fwckixGpq1vCPaPut9weqN4tGH/lHHnGN72IOvUQZ+p5u
+ECqxWVo4JqyJuDtz0i+z
+=RKB3
 -----END PGP SIGNATURE-----
