@@ -1,6 +1,11 @@
 # ChangeLog for app-text/qpdfview
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/qpdfview/ChangeLog,v 1.65 2015/02/20 08:39:29 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/qpdfview/ChangeLog,v 1.66 2015/03/05 13:37:24 yngwin Exp $
+
+*qpdfview-0.4.14 (05 Mar 2015)
+
+  05 Mar 2015; Ben de Groot <yngwin@gentoo.org> +qpdfview-0.4.14.ebuild:
+  version bump (bug #541206)
 
   20 Feb 2015; Ben de Groot <yngwin@gentoo.org> metadata.xml:
   Improve USE=fitz description (bug #540450)
